--- a/android-project/app/src/main/res/layout/activity_main.xml
+++ b/android-project/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:itemIconTint="@null"
-        app:itemTextColor="@color/selected_icon_color"
+        app:itemIconTint="@color/unselected_icon_color"
+        app:itemTextColor="@color/unselected_icon_color"
         app:menu="@menu/app_menu"
         app:elevation="8dp"
         android:background="@drawable/rounded_bottom"
@@ -35,7 +35,7 @@
         android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/selected_icon_color"
+        app:backgroundTint="@color/unselected_icon_color"
         android:src="@drawable/add"
         android:layout_marginBottom="-70dp"
         app:elevation="8dp"
