--- a/android-project/app/src/main/res/drawable/blurred_background.xml
+++ b/android-project/app/src/main/res/drawable/blurred_background.xml
@@ -2,7 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:right="10dp" android:left="10dp" android:top="10dp" android:bottom="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
+            <!-- Set semi-transparent pink color -->
+            <solid android:color="#88FFB6C1" /> <!-- 88 is the alpha for 50% transparency -->
             <corners android:radius="12dp" />
             <padding
                 android:left="10dp"
