--- a/android-project/app/src/main/res/drawable/button_background.xml
+++ b/android-project/app/src/main/res/drawable/button_background.xml
@@ -1,5 +1,5 @@
 <!-- res/drawable/button_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/black"/> <!-- Gomb színe -->
+    <solid android:color="@color/unselected_icon_color"/> <!-- Gomb színe -->
     <corners android:radius="16dp"/> <!-- Lekerekítés -->
 </shape>
