--- a/android-project/app/src/main/res/layout/fragment_add_new_recipe.xml
+++ b/android-project/app/src/main/res/layout/fragment_add_new_recipe.xml
@@ -136,6 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="56dp"
                     android:layout_marginTop="8dp"
+                    android:backgroundTint="@color/unselected_icon_color"
                     android:text="Add" />
             </LinearLayout>
         </ScrollView>
