labor 8 Room database

--- a/android-project/app/src/main/res/layout/fragment_profile.xml
+++ b/android-project/app/src/main/res/layout/fragment_profile.xml
@@ -37,6 +37,7 @@
             android:text="Érsek Beatrice-Adrienne"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="@color/unselected_icon_color"
             android:layout_marginBottom="8dp"
             android:gravity="center" />
 
