--- a/android-project/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/android-project/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back"
+            android:backgroundTint="@color/unselected_icon_color"
             android:layout_marginBottom="16dp"/>
 
         <!-- Recipe Thumbnail (ImageView) -->
