--- a/android-project/app/src/main/res/layout/fragment_add_new_recipe_api.xml
+++ b/android-project/app/src/main/res/layout/fragment_add_new_recipe_api.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.tasty.recipesapp.models.profile.ProfileRecipesViewModel" />
-    </data>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,7 +12,7 @@
             android:id="@+id/textViewRecipesTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add recipe to private recipes"
+            android:text="Add recipe to API"
             android:textSize="24sp"
             android:textStyle="bold"
             android:layout_marginBottom="16dp"
