--- a/android-project/app/src/main/res/layout/fragment_recipe.xml
+++ b/android-project/app/src/main/res/layout/fragment_recipe.xml
@@ -35,6 +35,17 @@
             android:padding="8dp"
             android:background="@drawable/rounded_edittext_background" />
 
+        <!-- Plus Button in the top-right corner -->
+        <ImageButton
+            android:id="@+id/imageButtonAddRecipe"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="16dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/add" />
+
         <!-- RecyclerView for Recipes -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewRecipes"
