--- a/android-project/app/src/main/res/layout/fragment_profile.xml
+++ b/android-project/app/src/main/res/layout/fragment_profile.xml
@@ -29,19 +29,12 @@
             android:clipToOutline="true"
             android:layout_gravity="center" />
 
-        <!-- Google Sign-In Button -->
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/googleSignInButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
-
         <!-- Recipe of the Day Button -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonRecipeOfTheDay"
             android:layout_width="374dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/googleSignInButton"
+            android:layout_below="@id/profileImage"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="17dp"
